--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "jade": "~1.11.0",
-    "morgan": "~1.8.1",
+    "mongodb": "^2.2.31",
+    "mongoskin": "^2.1.0",
+    "morgan": "^1.8.2",
     "serve-favicon": "~2.4.2"
   }
 }
