--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "mongodb": "^2.2.31",
     "mongoskin": "^2.1.0",
     "morgan": "^1.8.2",
+    "pg": "^7.3.0",
+    "sequelize": "^4.8.0",
     "serve-favicon": "~2.4.2"
   }
 }
